[package]
name = "av1an-core"
version = "0.4.4"
rust-version = "1.86"
edition = "2021"
authors = ["Zen <master_of_zen@protonmail.com>"]
description = """
Cross-platform command-line AV1 / VP9 / HEVC / H264 encoding framework with per scene quality encoding [Core library]
"""
repository = "https://github.com/master-of-zen/Av1an"
keywords = ["video"]
categories = ["command-line-utilities"]
license = "GPL-3.0"
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
arrayvec = "0.7.2"
av-decoders = { version = "0.3.0", features = ["vapoursynth"] }
av-format = "0.7.0"
av-ivf = "0.5.0"
av-scenechange = { version = "0.17.2", default-features = false, features = [
    "vapoursynth",
] }
av1-grain = { version = "0.2.4", default-features = false, features = [
    "create",
] }
cfg-if = "1.0.1"
crossbeam-channel = "0.5.15"
crossbeam-utils = "0.8.5"
dashmap = { version = "6.0.0", features = ["serde"] }
indicatif = "0.18.0"
itertools = "0.14.0"
memchr = "2.7.5"
nom = "8.0.0"
num-traits = { workspace = true }
once_cell = { workspace = true }
parking_lot = "0.12.4"
pastey = "0.1.0"
path_abs = { workspace = true }
plotters = { version = "0.3.1", default-features = false, features = [
    "svg_backend",
    "line_series",
] }
rand = "0.9.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simdutf8 = "0.1.3"
smallvec = { version = "1.15.1", default-features = false, features = [
    "const_generics",
    "const_new",
    "union",
] }
strsim = "0.11.0"
strum = { version = "0.27.1", features = ["derive"] }
sysinfo = "0.36.0"
textwrap = "0.16.0"
thiserror = "2.0.11"
tracing = { workspace = true }
which = "8.0.0"
y4m = "0.8.0"
vapoursynth = { version = "0.4.0", features = [
    "vsscript-functions",
    "vapoursynth-functions",
] }
# TODO: move all of this CLI stuff to av1an-cli
colored = "3.0.0"
ctrlc = "3.4.7"
regex = "1.11.1"

# TODO: https://github.com/elast0ny/affinity/issues/2
# update this when macos support is implemented
[target.'cfg(any(target_os = "linux", target_os = "windows"))'.dependencies]
affinity = "0.1.2"

[dev-dependencies]
tempfile = { workspace = true }

[features]
default = ["vapoursynth_new_api"]
vapoursynth_new_api = [
    "vapoursynth/vapoursynth-api-32",
    "vapoursynth/vsscript-api-31",
]

[lints.clippy]
inline_always = "warn"
missing_inline_in_public_items = "warn"
