[package]
name = "av1an"
version = "0.4.4"
rust-version = "1.86"
edition = "2021"
authors = ["Zen <master_of_zen@protonmail.com>"]
description = """
Cross-platform command-line AV1 / VP9 / HEVC / H264 encoding framework with per scene quality encoding [Command line library]
"""
repository = "https://github.com/master-of-zen/Av1an"
keywords = ["video"]
categories = ["command-line-utilities"]
license = "GPL-3.0"
readme = "../README.md"

[[bin]]
name = "av1an"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
av1an-core = { path = "../av1an-core", version = "0.4.1" }
clap = { version = "4.5.41", features = ["derive"] }
ffmpeg = { workspace = true }
num-traits = { workspace = true }
once_cell = { workspace = true }
path_abs = { workspace = true }
shlex = "1.3.0"
tracing = { workspace = true }
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[build-dependencies]
vergen-git2 = { version = "1.0.0", features = ["build", "rustc", "cargo"] }

[features]
default = []
ffmpeg_static = ["ffmpeg/static", "ffmpeg/build", "av1an-core/ffmpeg_static"]
